feat: updated package name and README

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate-phase1",
+  "name": "boilerplate-phase1-tw",
   "type": "module",
   "version": "0.2.0",
   "description": "React with react-query!",
