--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
+    "sass-embedded": "^1.77.8",
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
