--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "react-accessible-accordion": "^5.0.0",
+    "react-gtm-module": "^2.0.11",
     "superagent": "^8.1.2"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-gtm-module": "^2.0.3",
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
     "@vitejs/plugin-react": "^4.2.1",
