--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/react": "^14.0.0",
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.19.49",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-gtm-module": "^2.0.3",
@@ -69,5 +69,10 @@
       "prettier-plugin-tailwindcss"
     ]
   },
-  "browserslist": "> 2%, not dead"
+  "browserslist": "> 2%, not dead",
+  "react-dotenv": {
+    "whitelist": [
+      "GTAG"
+    ]
+  }
 }
