--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "boilerplate-phase1-tw",
+  "name": "andrew-bolton-sports-massage",
   "type": "module",
   "version": "0.2.0",
-  "description": "React with react-query!",
-  "repository": "https://github.com/dev-academy-challenges/boilerplate-phase1.git",
+  "description": "My massage website",
+  "repository": "https://github.com/andrew-molten/absmassage",
   "main": "server/index.js",
   "scripts": {
     "dev": "vite",
@@ -18,12 +18,13 @@
       "bundle.js"
     ]
   },
-  "author": "Dev Academy Aotearoa",
+  "author": "Andrew Molten",
   "license": "ISC",
   "dependencies": {
     "react-accessible-accordion": "^5.0.0",
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
+    "react-icons": "^5.3.0",
     "superagent": "^8.1.2"
   },
   "devDependencies": {
