--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^5.3.0",
-    "superagent": "^8.1.2"
+    "superagent": "^8.1.2",
+    "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
