--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "server/index.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp dist/index.html build/",
     "postbuild": "react-snap",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
@@ -22,6 +22,7 @@
   "author": "Andrew Molten",
   "license": "ISC",
   "dependencies": {
+    "puppeteer": "^23.3.0",
     "react-accessible-accordion": "^5.0.0",
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
