--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "repository": "https://github.com/andrew-molten/absmassage",
   "main": "server/index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "format": "prettier -w '**/*.{js,jsx,ts,tsx}'"
@@ -21,6 +22,7 @@
   "author": "Andrew Molten",
   "license": "ISC",
   "dependencies": {
+    "next": "^14.2.11",
     "react-accessible-accordion": "^5.0.0",
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
