--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,20 @@
   "compilerOptions": {
     "types": ["vite/client", "node"],
     "target": "es2020",
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "module": "ES2020",
     "moduleResolution": "Bundler",
     "noEmit": true,
+    "allowJs": true,
     "isolatedModules": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "incremental": true,
     "strict": true,
     "allowImportingTsExtensions": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+    "plugins": [{ "name": "next" }]
+  },
+  "include": ["./client", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "exclude": ["./node_modules"]
 }
