--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^5.3.0",
+    "sass": "^1.78.0",
     "superagent": "^8.1.2",
     "use-mailchimp-form": "^3.1.0"
   },
