--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
   "include": [
     "./client",
     "./dist/types/**/*.ts",
-    "./next-env.d.ts"
+    "./next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "./node_modules"
