add no-unused-vars to settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{ "scss.lint.unknownAtRules": "ignore" }
+{
+  "scss.lint.unknownAtRules": "ignore",
+  "eslint.options": {
+    "rules": {
+      "@typescript-eslint/no-unused-vars": "off"
+    }
+  }
+}
