--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "scss.lint.unknownAtRules": "ignore",
   "eslint.options": {
+    "extends": ["next", "next/core-web-vitals"],
     "rules": {
       "@typescript-eslint/no-unused-vars": "off"
     }
