--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "next start",
     "test": "vitest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "format": "prettier -w '**/*.{js,jsx,ts,tsx}'"
+    "format": "prettier -w '**/*.{js,jsx,ts,tsx}'",
+    "postbuild": "next-sitemap"
   },
   "eslintConfig": {
     "extends": "@devacademy/eslint-config/react",
@@ -23,6 +24,7 @@
   "license": "ISC",
   "dependencies": {
     "next": "^14.2.11",
+    "next-sitemap": "^4.2.3",
     "react-accessible-accordion": "^5.0.0",
     "react-elfsight-widget": "^1.1.1",
     "react-gtm-module": "^2.0.11",
@@ -32,7 +34,6 @@
     "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
-    "@devacademy/eslint-config": "^1.10.1",
     "@tanstack/eslint-plugin-query": "^5.12.2",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
@@ -46,6 +47,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.13",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-node": "^11.1.0",
