--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "author": "Andrew Molten",
   "license": "ISC",
   "dependencies": {
-    "next": "^14.2.11",
+    "@next/third-parties": "^14.2.13",
+    "next": "^14.2.13",
     "next-sitemap": "^4.2.3",
     "react-accessible-accordion": "^5.0.0",
     "react-elfsight-widget": "^1.1.1",
