--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@next/third-parties": "^14.2.13",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "^14.2.13",
     "next-sitemap": "^4.2.3",
     "react-accessible-accordion": "^5.0.0",
