--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@next/third-parties": "^14.2.13",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "gray-matter": "^4.0.3",
     "next": "^14.2.13",
+    "next-mdx-remote": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "react-gtm-module": "^2.0.11",
     "react-icons": "^5.3.0",
