--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "./src/**/*.ts",
     "./dist/types/**/*.ts",
     "./next-env.d.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "src/lib/widgetTheme.tsx",
+    "src/components/useWidgetLayout.tsx"
   ],
   "exclude": ["./node_modules"]
 }
